libqpol/include/qpol/avrule_query.h

	typedef struct qpol_avrule qpol_avrule_t;
#define QPOL_RULE_ALLOW         0x0001
#define QPOL_RULE_NEVERALLOW    0x0080
#define QPOL_RULE_AUDITALLOW    0x0002
#define QPOL_RULE_DONTAUDIT     0x0004
#define QPOL_RULE_XPERMS_ALLOW        0x0100
#define QPOL_RULE_XPERMS_AUDITALLOW   0x0200
#define QPOL_RULE_XPERMS_DONTAUDIT    0x0400
#define QPOL_RULE_XPERMS_NEVERALLOW   0x0800
	extern int qpol_policy_get_avrule_iter(const qpol_policy_t * policy, uint32_t rule_type_mask, qpol_iterator_t ** iter);
	extern int qpol_avrule_get_source_type(const qpol_policy_t * policy, const qpol_avrule_t * rule,
					       const qpol_type_t ** source);
	extern int qpol_avrule_get_target_type(const qpol_policy_t * policy, const qpol_avrule_t * rule,
					       const qpol_type_t ** target);
	extern int qpol_avrule_get_object_class(const qpol_policy_t * policy, const qpol_avrule_t * rule,
						const qpol_class_t ** obj_class);
	extern int qpol_avrule_get_perm_iter(const qpol_policy_t * policy, const qpol_avrule_t * rule, qpol_iterator_t ** perms);
	extern int qpol_avrule_get_xperm_iter(const qpol_policy_t * policy, const qpol_avrule_t * rule, qpol_iterator_t ** xperms);
	extern int qpol_avrule_get_is_extended(const qpol_policy_t * policy, const qpol_avrule_t * rule, uint32_t * is_extended);
	int qpol_avrule_get_xperm_type(const qpol_policy_t * policy, const qpol_avrule_t * rule, char ** type);
	extern int qpol_avrule_get_rule_type(const qpol_policy_t * policy, const qpol_avrule_t * rule, uint32_t * rule_type);
	extern int qpol_avrule_get_cond(const qpol_policy_t * policy, const qpol_avrule_t * rule, const qpol_cond_t ** cond);
	extern int qpol_avrule_get_is_enabled(const qpol_policy_t * policy, const qpol_avrule_t * rule, uint32_t * is_enabled);
	extern int qpol_avrule_get_which_list(const qpol_policy_t * policy, const qpol_avrule_t * rule, uint32_t * which_list);